Remove margins to avoid horizontal scroll

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -87,6 +87,10 @@ article {
 .table {
   overflow-x: hidden;
 }
+.row-menu {
+  margin-left: 0;
+  margin-right: 0;
+}
 
 /* sidebar */
 #sidebar {
